snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha1
59f4966749d6f04fc1b01edfe541fd854e97b533